[package]
name = "vignette"
version = "0.1.0"
authors = ["Nikhil Marathe <nsm.nikhil@gmail.com>"]
license = "MIT OR Apache-2.0"

[target.'cfg(unix)'.dependencies]
nix = "~0.11.0"
libc = "~0.2.42"
unwind-sys = "0.1.1"

[target.'cfg(unix)'.dev-dependencies]
rustc-demangle = "0.1.9"

[[example]]
name = "suspend_resume"

[[example]]
name = "sample_once"
