[package]
name = "threadinfo"
version = "0.1.0"
authors = ["Nikhil Marathe <nsm.nikhil@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0.69"
serde_derive = "1.0.69"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.45"

[target.'cfg(target_os = "macos")'.dependencies]
mach = "0.2.3"
