[package]
name = "vignette"
version = "0.1.0"
authors = ["Nikhil Marathe <nsm.nikhil@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
serde = "1.0.69"
serde_derive = "1.0.69"
serde_json = "1.0.26"
symbolic-debuginfo = "5.5.6"
symbolic-common = "5.5.6"
symbolic-symcache = "5.5.6"
memmap = "0.6.2"
threadinfo = { path = "../threadinfo" }
rustc-demangle = "0.1.11"

[target.'cfg(target_os = "linux")'.dependencies]
nix = "~0.11.0"
libc = "~0.2.42"
unwind-sys = "0.1.1"
goblin = "0.0.17"
hex = "0.3.2"

[target.'cfg(target_os = "macos")'.build-dependencies]
bindgen = "0.42.2"

[target.'cfg(target_os = "macos")'.dependencies]
mach = "0.2.3"
